[package]
description = "Sidekiq compatible server in Rust"
homepage = "https://github.com/pganalyze/sidekiq_server.rs"
license = "MIT"
name = "sidekiq_server"
repository = "https://github.com/pganalyze/sidekiq_server.rs"
version = "0.7.1-pre"
edition = "2021"
readme = "README.md"
keywords = ["sidekiq", "worker", "resque", "ruby"]

[dependencies]
crossbeam-channel = "0.5.5"
signal-hook = "0.3.14"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
error-chain = "0.12.4" # 2 years since last release. consider replacing with a different crate
libc = "0.2.126"
log = "0.4.17"
r2d2 = "0.8.10"
rand = "0.8.5"
redis = { version = "0.21.5", features = ["r2d2"] }
serde = "1.0.137"
serde_json = "1.0.81"
threadpool = "1.8.1" # 2 years since last release. there is a 2.0 branch currently in development

[dev-dependencies]
structopt = "0.3.26"
structopt-derive = "0.4.18"

[features]
default = []
