[package]
description = "Sidekiq compatible server in Rust"
homepage = "https://github.com/pganalyze/sidekiq_server.rs"
license = "MIT"
name = "sidekiq_server"
repository = "https://github.com/pganalyze/sidekiq_server.rs"
version = "0.7.1-pre"
edition = "2021"
readme = "README.md"
keywords = ["sidekiq", "worker", "resque", "ruby"]

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
async-channel = "1.7.1"
async-trait = "0.1.57"
signal-hook = "0.3.14"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
futures = "0.3.24"
gethostname = "0.2.3"
log = "0.4.17"
rand = "0.8.5"
redis = { version = "0.21.5", features = ["connection-manager", "tokio-comp", "tokio-native-tls-comp"] }
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
structopt = "0.3.26"
structopt-derive = "0.4.18"

[features]
default = []
