[package]
description = "Sidekiq compatible server in Rust"
homepage = "https://github.com/pganalyze/sidekiq_server.rs"
license = "MIT"
name = "sidekiq_server"
repository = "https://github.com/pganalyze/sidekiq_server.rs"
version = "0.7.1-pre"
edition = "2021"
readme = "README.md"
keywords = ["sidekiq", "worker", "resque", "ruby"]

[dependencies]
crossbeam-channel = "0.5"
signal-hook = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
env_logger = "0.11"
error-chain = "0.12"
log = "0.4"
r2d2 = "0.8"
rand = "0.8"
redis = { version = "0.27", features = ["r2d2"] }
serde = "1.0"
serde_json = "1.0"
threadpool = "1.8"
gethostname = "0.5"

[dev-dependencies]
structopt = "0.3"
structopt-derive = "0.4"

[features]
default = []
